--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,7 @@
 node {
 echo "job name is  ${env.JOB_NAME}"
 echo "node name is  ${env.NODE_NAME}"
+properties([buildDiscarder(logRotator(artifactDaysToKeepStr: '', artifactNumToKeepStr: '5', daysToKeepStr: '', numToKeepStr: '5')), [$class: 'JobLocalConfiguration', changeReasonComment: ''], pipelineTriggers([pollSCM('* * * * *')])])
 def mavenHome = tool name: 'maven3.8.4'
 //get the source code
 stage ('checkoutCode'){
